--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Linkedin Boolean Search",
-    "version": "1.0",
-    "description": "Extension to simplify boolean search for jobs on Linkedin platform",
+    "version": "1.1",
+    "description": "Extension to agilize boolean search for jobs on Linkedin platform",
     "author": "Caio Moreira de Carvalho",
     "icons":{
       "16": "/icons/icon16.png",
