--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Linkedin Boolean Search",
     "version": "1.1",
-    "description": "Extension to agilize boolean search for jobs on Linkedin platform",
+    "description": "Extension to agilize boolean search for jobs and candidates on Linkedin platform",
     "author": "Caio Moreira de Carvalho",
     "icons":{
       "16": "/icons/icon16.png",
